# mcp-sonar

./: .gitignore  README.md  __main__.py  pyproject.toml  sonarqube_mcp_server.py
