[project]
name = "mcp-sonarqube"
version = "1.0.0"
description = "Servidor MCP para integração com SonarQube"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
mcp-sonarqube = "sonarqube_mcp_server:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "sonarqube_mcp_server.py",
    "__main__.py",
]
